[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Attila Szucs <attila.szucs@gmail.com>"]
readme = "README.md"
packages = [{include = "day01"}]

[tool.poetry.dependencies]
python = "^3.11"
num2words = "^0.5.13"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
